<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_people" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
